<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.currency.CurrencyActivityFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/error_image"
                android:src="@drawable/ic_error"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/error_statement"
                android:text="@string/error_in_retrieving_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/error_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/mainCurrencyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainCurrency"
                android:textSize="24sp"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/mainCurrencyCodeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="wrap_content"
                android:entries="@array/code_list"
                tools:setOnItemSelectedListener="@{viewmodel.clicksListener}"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mainCurrencyText"/>

            <TextView
                android:id="@+id/outputCurrencyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outputCurrency"
                android:textSize="24sp"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/mainCurrencyCodeSpinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/outputCurrencyCodeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="wrap_content"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/outputCurrencyText"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amountToConvertLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/outputCurrencyCodeSpinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amountToConvert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount_to_convert"
                    android:inputType="numberDecimal"
                    android:layout_gravity="center"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/convertedAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/amountToConvertLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/dividerLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:paddingHorizontal="@dimen/margin_10"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/convertedAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/currencyRates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currencyRates"
                android:textSize="20sp"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/dividerLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/currencyListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currencyRates"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>