...
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>CHF</item>
        <item>CAD</item>
        <item>AED</item>
        <item>AUD</item>
        <item>PLN</item>
        <item>JPY</item>
        <item>ZAR</item>
        <item>CNY</item>
        <item>NZD</item>
        <item>SEK</item>
        <item>NOK</item>
        <item>KWD</item>
        <item>BHD</item>
        <item>OMR</item>
...
